<resources>
    <string name="app_name">ProductMonitoring</string>
    <string name="desc_splash_icon">App Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_success">Login berhasil</string>
    <string name="login_error">Login gagal</string>
    <string name="login_error_msg">Login gagal: %1s</string>

    <string name="tv_sign_in">Masuk</string>
    <string name="ti_username_hint">Username</string>
    <string name="ti_password_hint">Password</string>
    <string name="btn_login">Masuk</string>
    <string name="err_username_empty">Username tidak bisa kosong</string>
    <string name="err_username_invalid">Username invalid</string>
    <string name="err_password_empty">Password tidak bisa kosong</string>
    <string name="err_password_invalid">Password invalid</string>

    <string name="error_title">Error Title</string>
    <string name="error_description">Error Description</string>
    <string name="error_btn">Error Button</string>

    <string name="menu_sign_out">Keluar</string>
    <string name="menu_report">Kirim Report</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_products">Produk</string>
    <string name="bottom_nav_stores">Toko</string>
    <string name="tv_attendance_title">Status Absensi</string>

    <string name="attendance_status_not">Belum absen!</string>
    <string name="attendance_status_absent">Absen Kerja</string>
    <string name="attendance_status_present">Masuk Kerja</string>

    <string name="btn_set_present">Masuk kerja</string>
    <string name="btn_set_absent">Absen kerja</string>
    <string name="tv_store_page_title">List Toko Klien PandaBiru</string>
    <string name="tv_product_page_title">List Produk PandaBiru</string>
    <string name="toolbar_dashboard_title">Product Monitoring</string>
    <string name="toast_tap_back_twice">Tekan back lagi untuk keluar</string>
    <string name="tv_store_detail_code_title">Kode Toko :</string>
    <string name="tv_store_detail_alamat_title">Alamat Toko :</string>
    <string name="tv_open_produk_toko">Produk</string>
    <string name="tv_open_promo_toko">Promo</string>
    <string name="tv_store_products_title">List Produk %1s</string>
    <string name="tv_store_products_bs_title">Laporan Produk</string>
    <string name="cb_store_products_bs">Tersedia di toko</string>
    <string name="btn_konfirmasi">Konfirm</string>
    <string name="toast_remove_product">Produk dihapus dari toko</string>
    <string name="toast_add_product">Produk ditambah ke toko</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Apa anda yakin ingin logout?</string>
    <string name="dialog_yes">Ya</string>
    <string name="dialog_no">Tidak</string>
    <string name="tv_store_promo_bs_title">Laporan Promo</string>
    <string name="tv_promo_price_hint">Harga promo</string>
    <string name="tv_promo_remove_hint">* Kosongkan atau masukkan 0 untuk hapus promo</string>
    <string name="toast_no_promo_changes">Tidak ada perubahan promo</string>
    <string name="toast_promo_remove_success">Promo berhasil dihapus</string>
    <string name="toast_promo_added_success">Promo berhasil ditambahkan</string>
    <string name="tv_store_promo_title">List Promo %1s</string>
    <string name="snackbar_error_store_id_missing">Tidak ada ID toko</string>

</resources>